--- a/addtraslado.html
+++ b/addtraslado.html
@@ -8,6 +8,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/regiones.js"></script>
     <script src="js/val-traslados.js"></script>
+    <script src="js/script-aaddt.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="css/addt-styles.css">
@@ -41,6 +42,7 @@
         </section>
         <section class="main">
             <h1>Agregar traslado</h1>
+            <div class="caja">
                 <form method="post" onsubmit="return validarRyC() && validacion()">
                     <table>
                         <tbody>
@@ -63,13 +65,15 @@
                             <tr><th>Fecha de viaje</th></tr>
                             <tr><td><input type="date" name="fecha-viaje" id="fecha-viaje"></td></tr>
                             <tr><th>Escpacio necesario</th></tr>
-                            <tr><td><select name="espacio-necesario" id="esp-necesario">
+                            <tr><td><select name="espacio-necesario" id="esp-necesario" onchange="mostrar(this, 'mas', 'input-mascota')">
                                 <option value="30x30x30">30x30x30</option>
                                 <option value="50x50x50">50x50x50</option>
                                 <option value="100x100x100">100x100x100</option>
+                                <option value="mas">mas</option>
+                                <input type="text" size="15" id="input-mascota">
                             </select></td></tr>
                             <tr><th>Tipo de mascota</th></tr>
-                            <tr><td><select name="ti -po-mascota" id="tipo-mascota">
+                            <tr><td><select name="ti -po-mascota" id="tipo-mascota" onchange="mostrar(this, 'otro', 'input-otro')">
                                 <option value="gato">gato</option>
                                 <option value="perro">perro</option>
                                 <option value="conejo">conejo</option>
@@ -77,8 +81,16 @@
                                 <option value="tortuga">tortuga</option>
                                 <option value="otro">otro</option>
                             </select>
-                            </td></tr>
+                            <input type="text" size="15" id="input-otro">
+                            </td> </tr>
                             <tr><th>Foto mascota</th></tr>
+                            <tr><td>
+                                <div id="files">
+                                    <input type="file" name="1" value="1" accept="Image/*" oninput="annadirInputFile()"
+                                    on>
+                                </div>  
+                          </td></tr>
+                            
                             <!-- agregar inpt fotos -->
                             <tr><th>Descripcion mascota</th></tr>
                             <tr><td><textarea name="descripcion-mascota" id="descripcion" rows="8" cols="40" maxlength="500"> </textarea></td></tr>
@@ -93,6 +105,7 @@
                         </tbody>
                     </table>
                 </form>
+            </div>
         </section>
     </div>
 </body>
