--- a/index.html
+++ b/index.html
@@ -7,35 +7,39 @@
     <title>Tarea 1</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/landing-styles.css">
-    <link rel="stylesheet" href="css/banner-styles.css">
+    <link type="text/css" rel="stylesheet" href="css/landing-styles.css">
+    <link type="text/css" rel="stylesheet" href="css/banner-styles.css">
 </head>
 <body>
     <div class="container">
-        <section class="banner">
+        <div class="banner">
             <header>
                 <div class="content">
                     <div class="barra">
                         <div class="logo-banner">
                             <a href="index.html">
-                                    <img class="logo" src="img/banner-real.png"alt="banner">
+                                    <img class="logo" src="img/banner-real.png" alt="banner">
                             </a>
                         </div>
                         <div class="option-banner">
-                            <button class="nav-button"> <img class="menu-icon"src="img/menu.png" alt="menu-icon"></button>
+                            <button class="nav-button"> <img class="menu-icon" src="img/menu.png" alt="menu-icon"></button>
                             <a href="addtraslado.html"  class="nav-enlace desaparece">Agregar Traslado</a>
-                            <a href="#"  class="nav-enlace desaparece">Agregar Voluntarios </a>
-                            <a href="#"  class="nav-enlace desaparece">Ver Traslados  </a>
-                            <a href="#"  class="nav-enlace desaparece">VerVoluntarios  </a>
+                            <a href="addvoluntario.html"  class="nav-enlace desaparece">Agregar Voluntarios </a>
+                            <a href="vertraslados.html"  class="nav-enlace desaparece">Ver Traslados  </a>
+                            <a href="vervoluntarios.html"  class="nav-enlace desaparece">VerVoluntarios  </a>
                         </div>
                     </div>
                 
                 </div>
             </header>
-        </section>
-        <section class="main">
+        </div>
+        <div class="main">
 
-        </section>
+            <h1>
+                El mejor servicio de transporte de mascotas, a las puertas de su casa.
+            </h1>
+
+        </div>
     </div>
 </body>
 </html>
