Imagenes y arreglo de multi imagenes DB

--- a/addtraslado.html
+++ b/addtraslado.html
@@ -26,7 +26,7 @@
                 <div class="content">
                     <div class="barra">
                         <div class="logo-banner">
-                            <a href="index.html">
+                            <a href="index.php">
                                     <img class="logo" src="img/banner-real.png" alt="banner">
                             </a>
                         </div>
@@ -88,7 +88,7 @@
                             <tr><th>Foto mascota <small>(.jpg, .jpeg, .png, .gif)</small> </th></tr>
                             <tr><td>
                                 <div id="files">
-                                    <input type="file" accept="Image/*" onchange="validarImagen(this) , annadirInputFile()" name="Foto-mascota">
+                                    <input type="file" accept="Image/*" onchange="validarImagen(this) , annadirInputFile()" name="Foto-mascota1">
                                 </div>  
                           </td></tr>
                             
