--- a/addvoluntario.html
+++ b/addvoluntario.html
@@ -26,7 +26,7 @@
                 <div class="content">
                     <div class="barra">
                         <div class="logo-banner">
-                            <a href="index.html">
+                            <a href="index.php">
                                     <img class="logo" src="img/banner-real.png" alt="banner">
                             </a>
                         </div>
